<?xml version="1.0"?>
<package format="2">
  <name>cnbiros_joystick</name>
  <version>0.9.5</version>
  <description>CNBIROS Joystick package</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy-teleop</exec_depend>
</package>
